// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderedList default view 1`] = `
<div
  className="shopping-cart"
>
  <div
    className="item"
  >
    <div
      className="store-name"
    >
      kebuke
    </div>
    <div
      className="item-name"
    >
      bubble tea
    </div>
    <div
      className="count-area"
    >
      <div
        className="decrease"
        onClick={[Function]}
      />
      <div
        className="count"
      >
        5
      </div>
      <div
        className="increase"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="item"
  >
    <div
      className="store-name"
    >
      i lan
    </div>
    <div
      className="item-name"
    >
      rumen
    </div>
    <div
      className="count-area"
    >
      <div
        className="decrease"
        onClick={[Function]}
      />
      <div
        className="count"
      >
        2
      </div>
      <div
        className="increase"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="item"
  >
    <div
      className="store-name"
    >
      7-11
    </div>
    <div
      className="item-name"
    >
      coke
    </div>
    <div
      className="count-area"
    >
      <div
        className="decrease"
        onClick={[Function]}
      />
      <div
        className="count"
      >
        15
      </div>
      <div
        className="increase"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="item"
  >
    <div
      className="store-name"
    >
      family mart
    </div>
    <div
      className="item-name"
    >
      beer
    </div>
    <div
      className="count-area"
    >
      <div
        className="decrease"
        onClick={[Function]}
      />
      <div
        className="count"
      >
        24
      </div>
      <div
        className="increase"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="footer"
  >
    <div
      className="button large"
      onClick={[Function]}
    >
      Order
    </div>
  </div>
</div>
`;

exports[`OrderedList empty view 1`] = `
<div
  className="shopping-cart"
>
  <div
    className="footer"
  >
    <div
      className="button large"
      onClick={[Function]}
    >
      Order
    </div>
  </div>
</div>
`;
